--- a/css/style.css
+++ b/css/style.css
@@ -115,17 +115,18 @@ body {
     font-size: 20px;
     border: solid 2px black;
     padding: 5%;
-    
+
     background-color: white;
 }
+
 .cac_link {
     color: black;
-    transition: 200ms ease-in-out color;
+    transition: 120ms ease-in-out color;
 }
 
 .cac_link:hover {
     color: rgb(214, 147, 2);
-    transition-delay: 200ms;
+    transition-delay: 120ms;
 
 }
 
@@ -171,8 +172,7 @@ body {
 
 
 /* MAIN SECTION */
-.openClearSection {
-}
+.openClearSection {}
 
 main {
     display: flex;
@@ -203,9 +203,11 @@ main {
 .i_sizingmainimg {
     width: 100%;
 }
+
 .menu_text {
     font-size: 18px;
 }
+
 .menu_link_container {
     display: flex;
     flex-direction: column;
@@ -228,7 +230,7 @@ main {
 .menu_button:hover {
     transition-delay: 200ms;
     border-radius: 20px;
-    color:rgb(214, 147, 2);
+    color: rgb(214, 147, 2);
 }
 
 
@@ -241,6 +243,7 @@ main {
     flex-direction: column;
     padding-bottom: 5%;
 }
+
 .topClock {
     display: flex;
     justify-content: start;
@@ -257,6 +260,7 @@ main {
 .i_timeData {
     padding: 2%;
 }
+
 .sizeItem {
     font-size: 25px;
 }
@@ -272,7 +276,7 @@ main {
 }
 
 .timeContent {
-    font-family:'Rubik', sans-serif;
+    font-family: 'Rubik', sans-serif;
     letter-spacing: 2px;
     width: 100%;
     font-size: 18px;
@@ -280,14 +284,14 @@ main {
 }
 
 .i_coloritem {
-    color:rgb(202, 202, 202);
+    color: rgb(202, 202, 202);
 }
 
 .i_color-sub-text {
     font-size: 13px;
     line-height: 100%;
     letter-spacing: 1px;
-    color:rgb(173, 172, 172);
+    color: rgb(173, 172, 172);
 }
 
 .link_hover {
@@ -310,7 +314,7 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    
+
 }
 
 .title-second-unit {
@@ -318,5 +322,65 @@ main {
     font-size: 25px;
     font-family: 'Rubik', sans-serif;
     letter-spacing: 2px;
-    margin-top: 5%;
+    margin: 2% 0 1% 0;
+}
+
+.mainContentAbout {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 10%;
+}
+
+.GraphSyntax {
+    text-align: center;
+    font-size: 21px;
+    line-height: 40px;
+}
+
+.bolderText {
+    font-weight: bold ;
+}
+
+.orangeColor {
+    color: rgb(214, 147, 2);
+}
+
+.greenColor {
+    color: rgb(6, 193, 103);
+}
+
+.italicText {
+    font-style: italic;
+}
+
+
+.cac_container_About {
+    width: 100%;
+    margin-top: 0%;
+    display: flex;
+    justify-content: center;
+}
+
+.cac_button_About {
+    font-family: 'Rubik', sans-serif;
+    font-size: 20px;
+    border: solid 2px black;
+    padding: 5%;
+    border-radius: 25px;
+    width: 100%;
+
+    background-color: white;
+}
+
+
+/* THIRD SECTION */
+
+.imageBandContact {
+    width: 100%;
+    height: 200px;
+    background-image: url(/images/bandeau-salades.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
